WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120360
[EFL] Let Page create the main Frame
https://bugs.webkit.org/show_bug.cgi?id=120360
Summary
[EFL] Let Page create the main Frame
Ryuan Choi
Reported
2013-08-27 06:58:46 PDT
All layout tests an EWebLauncher was crashed because page create main frame since
r154616
. Patch will be added.
Attachments
Patch
(11.49 KB, patch)
2013-08-27 07:24 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2
(454.18 KB, application/zip)
2013-08-27 08:04 PDT
,
Build Bot
no flags
Details
Follow kubo's comment
(14.98 KB, patch)
2013-08-27 17:16 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion
(623.59 KB, application/zip)
2013-08-27 18:01 PDT
,
Build Bot
no flags
Details
Patch
(15.02 KB, patch)
2013-08-27 18:39 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2013-08-27 07:24:27 PDT
Created
attachment 209767
[details]
Patch
Build Bot
Comment 2
2013-08-27 08:04:29 PDT
Comment on
attachment 209767
[details]
Patch
Attachment 209767
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/1579316
New failing tests: fast/workers/termination-with-port-messages.html
Build Bot
Comment 3
2013-08-27 08:04:32 PDT
Created
attachment 209774
[details]
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4
Raphael Kubo da Costa (:rakuco)
Comment 4
2013-08-27 10:15:00 PDT
I didn't have time to look at the whole patch, but ewk_frame_coreFrame_set looks like a weird function name. Why not add setCoreFrame to EWKPrivate (just like we already have coreFrame() there) and call it instead?
Raphael Kubo da Costa (:rakuco)
Comment 5
2013-08-27 13:57:33 PDT
Comment on
attachment 209767
[details]
Patch Overall, I found the new location of the calls more confusing than before. Can't we get our behavior more inline with GTK+'s? It basically has most of the code present in ewk_view_frame_create() in FrameLoaderClientGtk::createFrame() itself.
Ryuan Choi
Comment 6
2013-08-27 17:16:12 PDT
Created
attachment 209823
[details]
Follow kubo's comment
Ryuan Choi
Comment 7
2013-08-27 17:19:02 PDT
(In reply to
comment #4
)
> I didn't have time to look at the whole patch, but ewk_frame_coreFrame_set looks like a weird function name. Why not add setCoreFrame to EWKPrivate (just like we already have coreFrame() there) and call it instead?
Fixed. (In reply to
comment #5
)
> (From update of
attachment 209767
[details]
) > Overall, I found the new location of the calls more confusing than before. Can't we get our behavior more inline with GTK+'s? It basically has most of the code present in ewk_view_frame_create() in FrameLoaderClientGtk::createFrame() itself.
Thank you for good suggestion. I thought that ewk_view_frame_create is bad way. I moved most of the code to FrameLoaderClientEfl::createFrame().
Build Bot
Comment 8
2013-08-27 18:00:59 PDT
Comment on
attachment 209823
[details]
Follow kubo's comment
Attachment 209823
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/1624087
New failing tests: fast/workers/termination-with-port-messages.html
Build Bot
Comment 9
2013-08-27 18:01:03 PDT
Created
attachment 209828
[details]
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-08 Port: mac-mountainlion Platform: Mac OS X 10.8.4
Gyuyoung Kim
Comment 10
2013-08-27 18:17:57 PDT
Comment on
attachment 209823
[details]
Follow kubo's comment View in context:
https://bugs.webkit.org/attachment.cgi?id=209823&action=review
> Source/WebKit/efl/ChangeLog:3 > + [EFL] Crash after
r154616
It looks this patch has meaningful change current title is unable to represent. It would move this title to description. Then, please change title more meaningful thing.
> Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:380 > + if (!coreSubFrame->page()) {
EWKPrivate::coreFrame may return 0. Don't you need to check if coreSubFrame is null ? WebCore::Frame* coreFrame(const Evas_Object* ewkFrame) { EWK_FRAME_SD_GET_OR_RETURN(ewkFrame, smartData, 0); return smartData->frame; }
> Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:381 > + evas_object_del(subFrame);
It would be nice to add a message.
> Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:391 > + evas_object_del(subFrame);
ditto.
Ryuan Choi
Comment 11
2013-08-27 18:39:29 PDT
Created
attachment 209833
[details]
Patch
Ryuan Choi
Comment 12
2013-08-27 18:42:24 PDT
(In reply to
comment #10
)
> (From update of
attachment 209823
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=209823&action=review
> > > Source/WebKit/efl/ChangeLog:3 > > + [EFL] Crash after
r154616
> > It looks this patch has meaningful change current title is unable to represent. It would move this title to description. Then, please change title more meaningful thing. >
OK, I changed like other ports did.
> > Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:380 > > + if (!coreSubFrame->page()) { > > EWKPrivate::coreFrame may return 0. Don't you need to check if coreSubFrame is null ? > > > WebCore::Frame* coreFrame(const Evas_Object* ewkFrame) > { > EWK_FRAME_SD_GET_OR_RETURN(ewkFrame, smartData, 0); > return smartData->frame; > } >
Added ASSERT. I think that it can't be NULL logically.
> > Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:381 > > + evas_object_del(subFrame); > > It would be nice to add a message. > > > Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:391 > > + evas_object_del(subFrame); > > ditto.
I think that this is normal case. So we don't need to print error message.
Gyuyoung Kim
Comment 13
2013-08-28 17:06:54 PDT
Comment on
attachment 209833
[details]
Patch Darin set r+ instead of me. It looks there is no critical problem now. I land this patch in order to fix EFL WK1 buildbot as soon as possible.
WebKit Commit Bot
Comment 14
2013-08-28 17:30:18 PDT
Comment on
attachment 209833
[details]
Patch Clearing flags on attachment: 209833 Committed
r154798
: <
http://trac.webkit.org/changeset/154798
>
WebKit Commit Bot
Comment 15
2013-08-28 17:30:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug