[EFL] Let Page create the main Frame https://bugs.webkit.org/show_bug.cgi?id=120360

Reviewed by Darin Adler.

Page always creates the main Frame by itself after r154616.
This patch follows the changes for WebKit/Efl like other ports.

* WebCoreSupport/FrameLoaderClientEfl.cpp:
(WebCore::FrameLoaderClientEfl::createFrame):
Moved the logic of ewk_view_frame_create.
* ewk/ewk_frame.cpp:
(ewk_frame_init):
(ewk_frame_child_add):
Moved construction logic of Frame and FrameLoderClientEfl from ewk_view.
(EWKPrivate::setCoreFrame):
* ewk/ewk_frame_private.h:
* ewk/ewk_view.cpp: Removed _ewk_view_core_frame_new.
(_ewk_view_priv_new):
(_ewk_view_smart_add):
(ewk_view_frame_rect_changed):
* ewk/ewk_view_private.h:


Canonical link: https://commits.webkit.org/138428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154798 268f45cc-cd09-0410-ab3c-d52691b4dbfc